testing_app/error.txt
  File "x.py", line 4
    print(reduce(lambda acc, (c, e): acc + int(x[0]) * x[1], zip(s[::2], s[1::2]), ''))
                             ^
SyntaxError: invalid syntax
